# aquarium_jetson_nano

./: README.md  imx296_constants.sh  imx296_gst.sh  imx296_set_trigger.py  imx296_stereo.sh  imx296_trigger_gpios.py  imx296_v4l.sh
broken/: imx296_stereo_nvcompositor.sh  nvcompositor_example.sh
docs/: README.md  bill_of_materials.md  imu.md  index.md  nano_setup.md  sensor_board.md
docs/journal/: 2024‐04‐23-Considering-Vision-Components-camera-options.md  2024‐10‐14-Jetson-Bringup.md  2024‐10‐21-Adapting-AlliedVision-buildscripts.md  2024‐10‐24-Camera-proof-of-life.md  2024‐10‐31-First-test-with-Vision-Component-MIPI-module.md
mavlink/: DISTANCE_SENSOR.md  README.md  pyproject.toml
mavlink/mavlink_mwe/: dump_messages.py  query_mavlink.py  send_mavlink.py
opencv/: opencv_composite_stereo.py  opencv_sobel.py  opencv_stereo.py
opencv/orb_detector_mwe/: README.md  pyproject.toml
opencv/orb_detector_mwe/orb_detector_mwe/: entrypoint.py
qtpy_firmware/: README.md  code.py  parse_board_sample.py
ros2/imu_bag_rewriter/: README.md  pyproject.toml
ros2/imu_bag_rewriter/analysis_notebooks/: imu_analysis.ipynb
ros2/imu_bag_rewriter/imu_bag_rewriter/: entrypoint.py
