[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mavlink_mwe"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "pymavlink"
]

[tool.setuptools]
packages = ["mavlink_mwe"]

[project.scripts]
query_mavlink = "mavlink_mwe.query_mavlink:main"
send_mavlink  = "mavlink_mwe.send_mavlink:main"